--- a/index.html
+++ b/index.html
@@ -284,6 +284,46 @@
   </section><!-- End About Section -->
 
 
+  <!-- ======= Services Section ======= -->
+  <section id="services" class="services">
+    <div class="container">
+
+      <div class="section-title">
+        <h2>Services</h2>
+        <p>My Services</p>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-4 col-md-6  align-items-stretch">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <h4><a href="">Web Development</a></h4>
+            <p>JavaScript, PHP, HTML, MySQL</p>
+            
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6  align-items-stretch  mt-4 mt-md-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h4><a href="">Web Design</a></h4>
+            <p>Css, Bootstrap, Figma</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-tachometer"></i></div>
+            <h4><a href="">Graphic Design</a></h4>
+            <p>Photoshop, Illerstrator, &nbsp;</p>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Services Section -->
+
 
 
   <!-- Vendor JS Files -->
